intento de estudio de normalidad